--- a/.github/workflows/main_webappdeploytestgit.yml
+++ b/.github/workflows/main_webappdeploytestgit.yml
@@ -49,7 +49,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -60,10 +62,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2213522EEA39447B889B7CE87A798A85 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D07AEB8F62D245AF8EB0C1D04D8B3279 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_75BA946484AF466FB1CDB598580FCD14 }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'WebAppDeployTestGit'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9ED965C0364A4E4A84D7F37DEE4C5D1F }}
+          
